@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Support non-ASCII characters in user-defined flag names (Request #12335).
 * [mms] Potentially save a call to the contacts backend when viewing HTML messages if no image data is present in the message.
 * [mms] Improved styling of dynamic mailbox page, to fix issues when resizing the browser font size (Bug #13071).
 * [mms] Don&apos;t send as multipart/alternative if plaintext part is empty.
@@ -1473,7 +1474,7 @@
    <package>
     <name>Horde_Util</name>
     <channel>pear.horde.org</channel>
-    <min>2.2.0</min>
+    <min>2.4.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
