@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Support non-ASCII characters in user-defined flag names (Request #12335).
 [mms] Potentially save a call to the contacts backend when viewing HTML
       messages if no image data is present in the message.
 [mms] Improved styling of dynamic mailbox page, to fix issues when resizing the
